# serde_yaml2

./: CHANGELOG.md  Cargo.toml  README.md
examples/: deserialize.rs  deserialize_into_dynamic_value.rs  enum.rs  serialize.rs
src/: lib.rs
src/de/: mod.rs
src/ser/: mod.rs
src/wrapper/: mod.rs
tests/: integration_test.rs
